updated sql properties

--- a/InstaBackend/src/main/resources/application.properties
+++ b/InstaBackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/instaBackend_fs11
-spring.datasource.username=root
-spring.datasource.password=ina728dg
+spring.datasource.url= jdbc:mysql://13.232.240.46:3306/testdb
+spring.datasource.username=mg-test-1
+spring.datasource.password=1234
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
